tests/fixtures/errors/circular_a.lox
import "self:circular_b.lox" as b;
var a_func = fn() { return 1; };
